Asmdef include update.

--- a/Runtime/Khepri.AssetDelivery.asmdef
+++ b/Runtime/Khepri.AssetDelivery.asmdef
@@ -7,7 +7,9 @@
         "Google.Play.Common"
     ],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Android"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
