--- a/Editor/Khepri.AssetDelivery.Editor.asmdef
+++ b/Editor/Khepri.AssetDelivery.Editor.asmdef
@@ -10,6 +10,7 @@
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
+        "Android",
         "Editor"
     ],
     "excludePlatforms": [],
