Dont include editor scripts in Android builds.

--- a/Editor/Khepri.AssetDelivery.Editor.asmdef
+++ b/Editor/Khepri.AssetDelivery.Editor.asmdef
@@ -10,9 +10,9 @@
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
-        "Android",
         "Editor"
     ],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+    ],
     "allowUnsafeCode": false
 }
